2008-04-08  Juanma Barranquero  <lekktu@gmail.com>

	* international/mule-cmds.el (set-locale-environment): Don't warn if
	coding system doesn't agree with system locale (this reverts changes
	by Dave Love, dated 2002-10-27 and 2002-10-09).

	* emacs-lisp/checkdoc.el (checkdoc-this-string-valid-engine):
	* emacs-lisp/cl-macs.el (get-setf-method): Use `string-match-p'.

	* emacs-lisp/copyright.el (copyright-update-year): Use `looking-at-p'.

2008-04-08  Glenn Morris  <rgm@gnu.org>

	* calendar/calendar.el (calendar-date-style): Remove autoload cookie.
	* textmodes/remember.el (remember-diary-convert-entry):
	Require calendar.

	* textmodes/remember.el (remember-diary-extract-entries): Don't pass
	diary-file, since it is the default for make-diary-entry anyway.

	* calendar/cal-menu.el (cal-menu-event-to-date):
	Rename calendar-event-to-date.  Update callers.
	(calendar-mouse-tex-day): Rename cal-tex-mouse-day.
	(calendar-mouse-tex-week): Rename cal-tex-mouse-week.
	(calendar-mouse-tex-week2): Rename cal-tex-mouse-week2.
	(calendar-mouse-tex-week-iso): Rename cal-tex-mouse-week-iso.
	(calendar-mouse-tex-week-monday): Rename cal-tex-mouse-week-monday.
	(calendar-mouse-tex-filofax-daily): Rename cal-tex-mouse-filofax-daily.
	(calendar-mouse-tex-filofax-2week): Rename cal-tex-mouse-filofax-2week.
	(calendar-mouse-tex-filofax-week): Rename cal-tex-mouse-filofax-week.
	(calendar-mouse-tex-month): Rename cal-tex-mouse-month.
	(calendar-mouse-tex-month-landscape):
	Rename cal-tex-mouse-month-landscape.
	(calendar-mouse-tex-year): Rename cal-tex-mouse-year.
	(calendar-mouse-tex-filofax-year): Rename cal-tex-mouse-filofax-year.
	(calendar-mouse-tex-year-landscape):
	Rename cal-tex-mouse-year-landscape.
	(cal-menu-context-mouse-menu): Update for above name changes.

	* calendar/cal-bahai.el, calendar/cal-china.el, calendar/cal-coptic.el:
	* calendar/cal-french.el, calendar/cal-hebrew.el, calendar/cal-islam.el: