@@ -488,7 +488,7 @@ The changes are between FIRST-REVISION and SECOND-REVISION."
 (defun vc-cvs-modify-change-comment (files rev comment)
   "Modify the change comments for FILES on a specified REV. 
 Will fail unless you have administrative privileges on the repo."
-  (vc-cvs-command nil 0 files "rcs" (concat "-m" comment ":" rev)))
+  (vc-cvs-command nil 0 files "admin" (concat "-m" rev ":" comment)))
 
 ;;;
 ;;; History functions
