@@ -528,7 +528,7 @@ Needs RCS 5.6.2 or later for -M."
   "Modify the change comments change on FILES on a specified REV."
   (dolist (file files)
     (vc-do-command nil 0 "rcs" (vc-name file)
-		   (concat "-m" comment ":" rev))))
+		   (concat "-m" rev ":" comment))))
 
 
 ;;;
